# prompt-tool-log-redactor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  security.yml  test.yml
docs/: SECURITY_REVIEW_2026-07.md
examples/: leaky-log.jsonl  leaky-log.txt  rules.json
src/prompt_tool_log_redactor/: __init__.py  __main__.py  _version.py  redactor.py
tests/: test_redactor.py
