[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-tool-log-redactor"
version = "0.1.1"
description = "Redact common secrets and PII from plain text and JSONL logs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OSS Contributors" }]
keywords = ["redaction", "logs", "security", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
prompt-tool-log-redactor = "prompt_tool_log_redactor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/mySebbe/prompt-tool-log-redactor"
Repository = "https://github.com/mySebbe/prompt-tool-log-redactor"
Issues = "https://github.com/mySebbe/prompt-tool-log-redactor/issues"
Changelog = "https://github.com/mySebbe/prompt-tool-log-redactor/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
"prompt_tool_log_redactor" = ["py.typed"]
